# house_price_analysis

./: .gitignore  README.md  checklist.md  detail_checklist.md  main.py  note.md  pyproject.toml
notebooks/: House_Price_Analysis.ipynb  House_Price_Analysis.py  House_Price_Analysis.py.bak  House_Price_Analysis_Noob.ipynb  House_Price_Analysis_Noob.py  cat.ipynb  cat.py  lasso.ipynb  lasso.py  lgbm.ipynb  lgbm.py  linear_regression.ipynb  linear_regression.py  numpy_exp.ipynb  numpy_exp.py  random_forest.ipynb  random_forest.py  random_forest_regressor_test.ipynb  random_forest_regressor_test.py  ridge.ipynb  ridge.py  standard_gradient_boosting.ipynb  standard_gradient_boosting.py  xgb_regressor.ipynb  xgb_regressor.py
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
submissions/: cat.csv  extreme_gradient_boost.csv  gbr.csv  lasso.csv  lgbm.csv  linear_regression.csv  random_forest.csv  ridge.csv  stack.csv  stack_initial.csv
