[project]
name = "house-price-analysis"
version = "0.1.0"
description = "House price analysis project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "jupyterlab>=4.4.10",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "python-lsp-server[all]>=1.13.1",
]

[tool.jupytext]
formats = "notebooks//ipynb,notebooks//py:percent"
