[project]
name = "house-price-analysis"
version = "0.1.0"
description = "House price analysis project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "jupyterlab>=4.4.10",
    "jupytext>=1.18.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "python-lsp-server[all]>=1.13.1",
]

[tool.jupytext]
formats = "notebooks//ipynb,notebooks//py:percent"
